added normalizing condition

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
-/simulation*
-/R0_simulation
-/r_simulation
-/r2_simulation
-/mu_simulation
+**/simulation*
 /test_simulation
+/test_simulation_omp
 /compiled_script
-.gitignore
-SimulationNh100No200Ro10mu1e-4Np10r10x50t100/
-        test_simulation_omp/
+**/Simulation*
 
