--- a/cpp_code/makefile
+++ b/cpp_code/makefile
@@ -3,10 +3,10 @@ CXX=g++
 CXXFLAGS=-std=c++17 -O2 -g
 LDFLAGS=-O2 -g
 LDLIBS=-lgsl -lcblas -lstdc++fs -fopenmp
-all: ../CRISPR_wave_main ../CRISPR_wave_main_omp
+all: ../CRISPR_wave_main
 test: main_test
 
-OBJFILES=convolution.o crispr_dyn.o init.o io.o
+OBJFILES=crispr_dyn.o init.o io.o
 
 ../CRISPR_wave_main: main.o $(OBJFILES) update_rules.o
 	$(CXX) $(LDFLAGS) -o $@ $^ $(LDLIBS)
@@ -14,13 +14,10 @@ OBJFILES=convolution.o crispr_dyn.o init.o io.o
 CRISPR_wave_main.o: main.cpp parameter.h
 	$(CXX) -c $(CXXFLAGS) -o $@ $<
 
-../CRISPR_wave_main_omp: omp_main.o $(OBJFILES) omp_update_rules.o
-	$(CXX) $(LDFLAGS) -o $@ $^ $(LDLIBS)
+# ../CRISPR_wave_main_omp: omp_main.o $(OBJFILES) omp_update_rules.o
+# 	$(CXX) $(LDFLAGS) -o $@ $^ $(LDLIBS)
 
 CRISPR_wave_main_omp.o: omp_main.cpp parameter.h
-	$(CXX) -c $(CXXFLAGS) -o $@ $<
-
-convolution.o: convolution.cpp convolution.h
 	$(CXX) -c $(CXXFLAGS) -o $@ $<
 
 crispr_dyn.o: crispr_dyn.cpp crispr_dyn.h
@@ -32,8 +29,8 @@ io.o: io.cpp io.h
 update_rules.o: update_rules.cpp update_rules.h
 	$(CXX) -c $(CXXFLAGS) -o $@ $<
 
-omp_update_rules.o: omp_update_rules.cpp omp_update_rules.h
-	$(CXX) -c $(CXXFLAGS) -o $@ $<
+# omp_update_rules.o: omp_update_rules.cpp omp_update_rules.h
+# 	$(CXX) -c $(CXXFLAGS) -o $@ $<
 
 main_test: main.cpp io.cpp update_rules.cpp init.cpp convolution.cpp 
 	g++ -std=c++17 -o main_test main.cpp io.cpp init.cpp crispr_dyn.cpp update_rules.cpp convolution.cpp -lgsl -lcblas -lstdc++fs #test
